Readme as about page

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -16,6 +16,7 @@ img.preview {
   object-fit: cover;
   object-position: 50% 50%;
   aspect-ratio: 16/9;
+  border-radius: 10px;
 }
 
 @media (min-width: 992px) {
