--- a/src/main/resources/static/css/user-menu.css
+++ b/src/main/resources/static/css/user-menu.css
@@ -24,3 +24,18 @@
 .user-profile .dropdown-toggle::after {
   display: none;
 }
+
+.user-popover {
+  z-index: 100;
+  position: absolute;
+}
+
+.toast-container {
+  position: absolute;
+  top: 75px;
+  right: 20px;
+}
+
+.toast-body {
+  color: black;
+}
