--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,8 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Protest+Strike&family=Spicy+Rice&display=swap');
+@import 'font-imports.css';
 
 /* Bootstrap */
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
+@import 'libs/bootstrap-5.3.3.css';
 
 /* Import our css files */
 @import 'variables.css';
