--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,7 @@
 /* Import our css files */
 @import 'variables.css';
 @import 'basic.css';
+@import 'header.css';
 @import 'sticky-footer.css';
 @import 'bootstrap-mods.css';
 @import 'artist.css';
