--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,6 +11,7 @@
 @import 'sticky-footer.css';
 @import 'bootstrap-mods.css';
 @import 'artist.css';
+@import 'album.css';
 @import 'form.css';
 @import 'edit-mode.css';
 @import 'about-page.css';
