--- a/src/main/resources/static/css/album.css
+++ b/src/main/resources/static/css/album.css
@@ -84,9 +84,6 @@
 .album-artist {
   width: calc(33.33% - 20px);
   float: left;
-}
-
-.album-artist {
   margin-left: 20px;
   border-radius: 15px;
   background-color: black;
@@ -111,4 +108,12 @@
   margin: 0;
   padding: 5px;
   font-size: 120%;
+}
+
+@media (max-width: 767.98px) {
+  .album-artist {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 20px;
+  }
 }
