--- a/src/main/resources/static/css/artist.css
+++ b/src/main/resources/static/css/artist.css
@@ -91,6 +91,11 @@
   width: 100%;
   aspect-ratio: 1;
   object-fit: cover;
+  transition: filter 1s;
+}
+
+.artist-album:hover img {
+  filter: saturate(1.5);
 }
 
 .artist-album p {
