Improving usability after Lighthouse Report

--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -32,3 +32,9 @@ footer {
 img[src="/images/404.png"] {
   width: 100%;
 }
+
+@media (max-width: 1199.98px) {
+  .read-more-detail {
+    display: none;
+  }
+}
